--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,22 +14,23 @@
     "extensions": [
         "golang.go"
     ],
-    // Configure tool-specific properties.
-    "customizations": {
-        // Configure properties specific to VS Code.
-        "vscode": {
-            // Set *default* container specific settings.json values on container create.
-            "settings": {
-                "go.toolsManagement.checkForUpdates": "local",
-                "go.useLanguageServer": true,
-                "go.gopath": "/workspace"
-            },
-            // Add the IDs of extensions you want installed when the container is created.
-            "extensions": [
-                "golang.Go"
-            ]
-        }
-    },
+    // // Configure tool-specific properties.
+    // "customizations": {
+    //     // Configure properties specific to VS Code.
+    //     "vscode": {
+    //         // Set *default* container specific settings.json values on container create.
+    //         "settings": {
+    //             "go.toolsManagement.checkForUpdates": "local",
+    //             "go.useLanguageServer": true,
+    //             "go.gopath": "/workspace",
+    //             "go.goroot": "/workspace"
+    //         },
+    //         // Add the IDs of extensions you want installed when the container is created.
+    //         "extensions": [
+    //             "golang.Go"
+    //         ]
+    //     }
+    // }
     "settings": {
         "files.eol": "\n",
         "remote.extensionKind": {
