--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   vscode:
-    build: .
+    image: qmcgaw/godevcontainer
     volumes:
       - ../:/workspace
       # Docker
